Don't rely on field order for SearchConsistencyIT assertions
Signed-off-by: David Schwilk <david.schwilk@bosch.io>